Replace Map.of() with Collections.emptyMap()